Added item descriptions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         src/verbs/version.cpp
         src/verbs/wait.cpp
         src/verbs/wear.cpp
-        src/verbs/yell.cpp 
+        src/verbs/yell.cpp
+        src/verbs/examine.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Halfway_Across APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
